# demo-experiment

./: .gitignore  Cargo.toml  Claude.md  README.md  metadata.json
api/: app-framework-demo-uncentered-dot-os-v0.wit  client.wit  curator.wit  indexer.wit  load-balancer.wit  types-app-framework-demo-uncentered-dot-os-v0.wit
caller-utils/: Cargo.toml
caller-utils/src/: lib.rs
client/: Cargo.toml
client/src/: lib.rs
curator/: Cargo.toml
curator/src/: lib.rs
indexer/: Cargo.toml
indexer/src/: lib.rs
load-balancer/: Cargo.toml  README.md
load-balancer/src/: lib.rs
pkg/: manifest.json  scripts.json
resources/: app-framework.md
test/: tests.toml
test/api/: client.wit  curator.wit  indexer.wit  test-app-framework-demo-uncentered-dot-os-v0.wit  types-test-app-framework-demo-uncentered-dot-os-v0.wit
test/demo-test/: Cargo.toml  metadata.json
test/demo-test/api/: client.wit  curator.wit  indexer.wit  load-balancer.wit  tester-app-framework-demo-uncentered-dot-os-v0.wit  types-app-framework-demo-uncentered-dot-os-v0.wit  types-test-app-framework-demo-uncentered-dot-os-v0.wit
test/demo-test/demo-test/: Cargo.toml
test/demo-test/demo-test/src/: fault_tolerance_tests.rs  lib.rs  load_balancer_tests.rs  tester_lib.rs
test/demo-test/pkg/: manifest.json
